test/integration/semantic/int_scalar_assign.pal
{9,10,12,13}
program intAssign(in, out);
type
    days = (Mon, Tues, Wed);
var
    i : integer;
    test : days;
begin
    i := Mon;   // error
    days := Tues; // error, cannot assign to type on LHS
    test := Tues;
    days := 2;	// should not work, see #86
    Wed := Mon;	// error
end.
